// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alignSelf renders 0 1`] = `
Array [
  .c0 {
  -webkit-align-self: 0;
  -ms-flex-item-align: 0;
  align-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: 0;
  -ms-flex-item-align: 0;
  align-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: 0;
  -ms-flex-item-align: 0;
  align-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: 0;
  -ms-flex-item-align: 0;
  align-self: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders function 1`] = `
Array [
  .c0 {
  -webkit-align-self: hasnot;
  -ms-flex-item-align: hasnot;
  align-self: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: has;
  -ms-flex-item-align: has;
  align-self: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: hasnot;
  -ms-flex-item-align: hasnot;
  align-self: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: has;
  -ms-flex-item-align: has;
  align-self: has;
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-align-self: invalid.path.1;
  -ms-flex-item-align: invalid.path.1;
  align-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: invalid.path.1;
  -ms-flex-item-align: invalid.path.1;
  align-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: invalid.path.1;
  -ms-flex-item-align: invalid.path.1;
  align-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: invalid.path.1;
  -ms-flex-item-align: invalid.path.1;
  align-self: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders negative number 1`] = `
Array [
  .c0 {
  -webkit-align-self: -54881;
  -ms-flex-item-align: -54881;
  align-self: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: -54881;
  -ms-flex-item-align: -54881;
  align-self: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: -42365;
  -ms-flex-item-align: -42365;
  align-self: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: -42365;
  -ms-flex-item-align: -42365;
  align-self: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: July;
    -ms-flex-item-align: July;
    align-self: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: August;
    -ms-flex-item-align: August;
    align-self: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: September;
    -ms-flex-item-align: September;
    align-self: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-align-self: November;
    -ms-flex-item-align: November;
    align-self: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: July;
    -ms-flex-item-align: July;
    align-self: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: August;
    -ms-flex-item-align: August;
    align-self: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: September;
    -ms-flex-item-align: September;
    align-self: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-align-self: November;
    -ms-flex-item-align: November;
    align-self: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: May;
    -ms-flex-item-align: May;
    align-self: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: June;
    -ms-flex-item-align: June;
    align-self: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: April;
    -ms-flex-item-align: April;
    align-self: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-align-self: November;
    -ms-flex-item-align: November;
    align-self: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: May;
    -ms-flex-item-align: May;
    align-self: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: June;
    -ms-flex-item-align: June;
    align-self: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-align-self: April;
    -ms-flex-item-align: April;
    align-self: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-align-self: November;
    -ms-flex-item-align: November;
    align-self: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-align-self: July;
    -ms-flex-item-align: July;
    align-self: July;
  }
}

@media April {
  .c0 {
    -webkit-align-self: August;
    -ms-flex-item-align: August;
    align-self: August;
  }
}

@media January {
  .c0 {
    -webkit-align-self: September;
    -ms-flex-item-align: September;
    align-self: September;
  }
}

@media April {
  .c0 {
    -webkit-align-self: November;
    -ms-flex-item-align: November;
    align-self: November;
  }
}

@media June {
  .c0 {
    -webkit-align-self: August;
    -ms-flex-item-align: August;
    align-self: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-align-self: July;
    -ms-flex-item-align: July;
    align-self: July;
  }
}

@media April {
  .c0 {
    -webkit-align-self: August;
    -ms-flex-item-align: August;
    align-self: August;
  }
}

@media January {
  .c0 {
    -webkit-align-self: September;
    -ms-flex-item-align: September;
    align-self: September;
  }
}

@media April {
  .c0 {
    -webkit-align-self: November;
    -ms-flex-item-align: November;
    align-self: November;
  }
}

@media June {
  .c0 {
    -webkit-align-self: August;
    -ms-flex-item-align: August;
    align-self: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-align-self: January;
    -ms-flex-item-align: January;
    align-self: January;
  }
}

@media April {
  .c0 {
    -webkit-align-self: December;
    -ms-flex-item-align: December;
    align-self: December;
  }
}

@media January {
  .c0 {
    -webkit-align-self: April;
    -ms-flex-item-align: April;
    align-self: April;
  }
}

@media April {
  .c0 {
    -webkit-align-self: May;
    -ms-flex-item-align: May;
    align-self: May;
  }
}

@media June {
  .c0 {
    -webkit-align-self: June;
    -ms-flex-item-align: June;
    align-self: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-align-self: January;
    -ms-flex-item-align: January;
    align-self: January;
  }
}

@media April {
  .c0 {
    -webkit-align-self: December;
    -ms-flex-item-align: December;
    align-self: December;
  }
}

@media January {
  .c0 {
    -webkit-align-self: April;
    -ms-flex-item-align: April;
    align-self: April;
  }
}

@media April {
  .c0 {
    -webkit-align-self: May;
    -ms-flex-item-align: May;
    align-self: May;
  }
}

@media June {
  .c0 {
    -webkit-align-self: June;
    -ms-flex-item-align: June;
    align-self: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-align-self: 54881;
  -ms-flex-item-align: 54881;
  align-self: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: 54881;
  -ms-flex-item-align: 54881;
  align-self: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: 42365;
  -ms-flex-item-align: 42365;
  align-self: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: 42365;
  -ms-flex-item-align: 42365;
  align-self: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders string 1`] = `
Array [
  .c0 {
  -webkit-align-self: July;
  -ms-flex-item-align: July;
  align-self: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: July;
  -ms-flex-item-align: July;
  align-self: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: June;
  -ms-flex-item-align: June;
  align-self: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: June;
  -ms-flex-item-align: June;
  align-self: June;
}

<div
    className="c0"
  />,
]
`;

exports[`alignSelf renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-align-self: DarkSlateBlue;
  -ms-flex-item-align: DarkSlateBlue;
  align-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: DarkSlateBlue;
  -ms-flex-item-align: DarkSlateBlue;
  align-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: DarkSlateBlue;
  -ms-flex-item-align: DarkSlateBlue;
  align-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-align-self: DarkSlateBlue;
  -ms-flex-item-align: DarkSlateBlue;
  align-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
